welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:9: error: ';' expected but '(' found.
	leveBrosse();
                  ^FlowerPot:13: error: ';' expected but '(' found.
	leveBrosse();
                  ^FlowerPot:17: error: ';' expected but '(' found.
	leveBrosse();
                  ^FlowerPot:21: error: ';' expected but '(' found.
	leveBrosse();
                  ^FlowerPot:25: error: ';' expected but '(' found.
	leveBrosse();
                  ^